--- a/sass/_contacts.scss
+++ b/sass/_contacts.scss
@@ -1,15 +1,105 @@
+form {
+  margin-right: 20px;
+}
+
+.section-contacts {
+  display: flex;
+  background-color: rgba(25, 28, 38, 1);
+}
+
+// онлайн-запись
+
+.input {
+  width: 100%;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.4;
+  letter-spacing: 0.1em;
+
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+  cursor: pointer;
+
+  &,
+  &::placeholder {
+    color: rgba(157, 164, 189, 0.4);
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+.container-online-appointment {
+  width: 55%;
+  padding-top: 130px;
+  padding-left: 56px;
+
+  & .sms-button {
+    padding: 12px 38px;
+  }
+}
+.title-online-appointment {
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.17;
+  margin-bottom: 44px;
+
+  letter-spacing: 0.05em;
+  color: $basic-white-color;
+}
+
+.container-name-tel {
+  display: flex;
+  margin-bottom: 44px;
+}
+
+.label-sms {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.4;
+  letter-spacing: 0.1em;
+
+  color: rgba(157, 164, 189, 0.4);
+}
+.input-sms {
+  width: 100%;
+  margin-bottom: 44px;
+}
+//  контакты
+.container-contacts {
+  width: 45%;
+  padding-top: 130px;
+  padding-bottom: 130px;
+  padding-left: 104px;
+
+  background-image: url(../images/Bg.png);
+  background-size: cover;
+}
+
 .title-contacts {
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
   font-size: 42px;
   line-height: 1.17;
+  letter-spacing: 0.05em;
 
-  // color: $basic-white-color;
+  margin-bottom: 40px;
+  color: $basic-white-color;
 }
 
 .list-contacts {
+  display: flex;
   list-style-type: none;
+  margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 80px;
+  }
 }
 
 .address-contacts {
@@ -18,6 +108,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.7;
+  letter-spacing: 0.02em;
 
   color: $secondary-gray;
 }
@@ -28,6 +119,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.7;
+  letter-spacing: 0.02em;
 
   color: $secondary-gray;
   text-decoration: none;
@@ -38,13 +130,19 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 1.7;
+  letter-spacing: 0.02em;
 
   color: $secondary-gray;
 }
-
+.container-text-trip {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
 .contacts-trip {
   height: 1px;
   width: 60px;
+  margin-right: 20px;
 
   background-color: rgba(157, 164, 189, 0.4);
 }
@@ -56,7 +154,7 @@
   font-size: 11px;
   line-height: 1.4;
 
-  //   color: $basic-white-color;
+  color: $basic-white-color;
 }
 
 .secondary-text-contacts {
@@ -67,4 +165,9 @@
   line-height: 1.7;
 
   color: $secondary-gray;
+}
+
+// иконки
+.svg-contacts {
+  margin-right: 20px;
 }
