--- a/sass/_masters.scss
+++ b/sass/_masters.scss
@@ -1,17 +1,29 @@
 .section-masters {
   background-color: #f7f7f7;
+  padding-top: 130px;
+  padding-bottom: 130px;
 }
-
+.masters-text-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
 .masters-trip {
   height: 1px;
   width: 60px;
+
+  margin-right: 20px;
   background-color: $basic-black-color;
 }
-
+.img-masters {
+  display: block;
+}
 .text-masters {
   font-weight: 600;
   font-size: 11px;
   line-height: 1.4;
+  margin: 0;
+
   color: $basic-black-color;
 }
 
@@ -21,9 +33,13 @@
   font-weight: 700;
   font-size: 42px;
   line-height: 1.17;
+  margin: 0;
+  margin-bottom: 20px;
 }
 .list-item-masters {
   display: flex;
+
+  padding: 0;
 }
 .list-masters {
   list-style-type: none;
@@ -34,12 +50,53 @@
 .title-name-masters {
   font-size: 18px;
   line-height: 1.4;
+
+  margin: 0;
+  margin-top: 30px;
+
   color: $basic-black-color;
+  text-align: center;
 }
 
 .text-position-masters {
   font-size: 14px;
   line-height: 1.4;
 
+  margin: 0;
+  margin-top: 8px;
+
   color: $orange;
+  text-align: center;
+}
+
+// соціальние сети
+.container-social-media {
+  display: flex;
+  justify-content: center;
+}
+
+.container-link-social-media {
+  margin-top: 30px;
+  width: 44px;
+  height: 44px;
+  background-color: $basic-white-color;
+  border-radius: 50%;
+  cursor: pointer;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
+  &:hover .svg-social-media,
+  &:focus .svg-social-media {
+    fill: $orange;
+  }
+}
+
+.link-social-media {
+  margin-top: 30px;
+}
+
+.svg-social-media {
+  fill: $basic-black-color;
+  margin: 27%;
 }
